# RIVA

./: ADR-VERIFICATION-BACKPORT.md  CLAUDE.md  pyproject.toml  riva.service
_archive/: ARCHITECTURE_PLAN.md  BENCHMARK_HARNESS_PLAN.md  README.md
_archive/src/riva/: audit_engine.py  cc_adapter.py  contract_store.py  nol_contract.py  stream_broker.py
_archive/tests/: bench_helpers.py  test_automation.py  test_bench_level3.py  test_contract_store.py  test_entry_guard.py  test_proxy_integration.py  test_sessions.py  test_stream_broker.py
_archive/tests/benchmark_cases/: level2_agent_dispatch.yaml
benchmarks/: __init__.py  anthropic_provider.py  db.py  judge.py  models.py  report.py  runner.py
docs/: API_REFERENCE.md  COMMIT_TRACKING_PLAN.md  INTERNAL_ARCHITECTURE.md  PLAN_PM_MIGRATION.md  TAURI_INTEGRATION_GUIDE.md
docs/archive/: IMPLEMENTATION_PLAN_code_mode.md
scripts/: migrate_product_db.py
src/riva/: __init__.py  automation.py  db.py  entry_guard.py  errors.py  models.py  plan_engine.py  play_integration.py  play_write.py  pm_store.py  properties_store.py  rpc_dispatcher.py  schema.py  service.py  sim_cc_manager.py  structured_planner.py
tests/: conftest.py  test_audit_engine.py  test_bench_level1.py  test_bench_level2.py  test_devops.py  test_nol_contract.py  test_plan_engine.py  test_play_write.py  test_pm_schema.py  test_pm_store.py  test_projects.py  test_properties_store.py  test_rpc_dispatcher.py  test_rpc_pm.py  test_schema.py  test_service.py
tests/benchmark_cases/: level1_entry_guard.yaml  level1_plan_engine.yaml  level3_hard.yaml
(+13 files in other folders)
