[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riva"
version = "0.1.0"
description = "RIVA — Agent orchestrator for project management."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    # talkingrock-core installed separately as editable from local path
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[project.scripts]
riva-service = "riva.service:run_service"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring Ollama + Claude Code (deselect with -m 'not e2e')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
